--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -71,28 +71,28 @@
 #     with_items: "{{system_fabric.vcenters_list}}"
 #     when: system_fabric.vcenters_list is defined
 
-#   - name: View all compute managers
-#     debug:
-#       msg: "{{cpu_mgr}}"
+  - name: View all compute managers
+    debug:
+      msg: "{{cpu_mgr}}"
 
-#   - name: Create transport zone
-#     nsxt_transport_zones:
-#       hostname: "{{nsxt_ip}}"
-#       username: "{{nsx_username}}"
-#       password: "{{nsx_password}}"
-#       validate_certs: False
-#       resource_type: "TransportZone"
-#       display_name: "TZ_{{item}}"
-#       host_switch_mode: "STANDARD"
-#       description: "NSX configured {{item}} Transport Zone"
-#       transport_type: "{%if 'Overlay' in item%}OVERLAY{%elif 'Vlan' in item%}VLAN{%endif%}"
-#       is_default: "false"
-#       nested_nsx: "false"
-#       host_switch_name: "NSXT-NVDS"
-#       state: "present"
-#     with_items:
-#       - Overlay
-#       - Vlan
+  - name: Create transport zone
+    nsxt_transport_zones:
+      hostname: "{{nsxt_ip}}"
+      username: "{{nsx_username}}"
+      password: "{{nsx_password}}"
+      validate_certs: False
+      resource_type: "TransportZone"
+      display_name: "TZ_{{item}}"
+      host_switch_mode: "STANDARD"
+      description: "NSX configured {{item}} Transport Zone"
+      transport_type: "{%if 'Overlay' in item%}OVERLAY{%elif 'Vlan' in item%}VLAN{%endif%}"
+      is_default: "false"
+      nested_nsx: "false"
+      host_switch_name: "NSXT-NVDS"
+      state: "present"
+    with_items:
+      - Overlay
+      - Vlan
 
 
 # # This is a spot in case the Edges are nested inside compute transport node NVDS
@@ -147,34 +147,34 @@
 #   #     ansible_python_interpreter: /usr/bin/python3
 
 
-#   - name: create policy IP Pool
-#     nsxt_policy_ip_pool:
-#       hostname: "{{nsxt_ip}}"
-#       username: "{{nsx_username}}"
-#       password: "{{nsx_password}}"
-#       validate_certs: False
-#       id: NSX_TEP_POOL
-#       display_name: NSX_TEP_POOL
-#       state: "present"
-#       pool_static_subnets:      
-#         [
-#         {
-#           "display_name": "TEP_subnet_{{item|ipaddr('network')}}",
-#           "state": "present",
-#           "allocation_ranges": [
-#             {
-#               "start": "{{item|ipaddr('2')|ipaddr('address')}}",
-#               "end": "{{item|ipaddr('-2')|ipaddr('address')}}"
-#             }
-#           ],
-#           "gateway_ip": "{{item|ipaddr('address')}}",
-#           "cidr": "{{item|ipaddr('network/prefix')}}"
-#         }
-#        ]
-#     loop: "{{system_fabric.tep_pool_gws}}"
-#     when: system_fabric.tep_pool_gws is defined       
-#     vars: 
-#       ansible_python_interpreter: /usr/bin/python3
+  - name: create policy IP Pool
+    nsxt_policy_ip_pool:
+      hostname: "{{nsxt_ip}}"
+      username: "{{nsx_username}}"
+      password: "{{nsx_password}}"
+      validate_certs: False
+      id: NSX_TEP_POOL
+      display_name: NSX_TEP_POOL
+      state: "present"
+      pool_static_subnets:      
+        [
+        {
+          "display_name": "TEP_subnet_{{item|ipaddr('network')}}",
+          "state": "present",
+          "allocation_ranges": [
+            {
+              "start": "{{item|ipaddr('2')|ipaddr('address')}}",
+              "end": "{{item|ipaddr('-2')|ipaddr('address')}}"
+            }
+          ],
+          "gateway_ip": "{{item|ipaddr('address')}}",
+          "cidr": "{{item|ipaddr('network/prefix')}}"
+        }
+       ]
+    loop: "{{system_fabric.tep_pool_gws}}"
+    when: system_fabric.tep_pool_gws is defined       
+    vars: 
+      ansible_python_interpreter: /usr/bin/python3
 
 
 
@@ -182,74 +182,74 @@
 
 
 
-#   - name: Create static compute/edge TEP Uplink Profiles
-#     nsxt_uplink_profiles:
-#       hostname: "{{nsxt_ip}}"
-#       username: "{{nsx_username}}"
-#       password: "{{nsx_password}}"
-#       validate_certs: False
-#       display_name: "UplinkProfl-{{item.name}}"
-#       # mtu: 1600
-#       resource_type: "UplinkHostSwitchProfile"
-#       state: "present"
-#       teaming: "{{item.tm}}"
-#       transport_vlan: "{{overlay_vlan|default(0)}}"
-#       named_teamings: "{{item.ntm|default(omit)}}"
-#     loop:  
-#       - {"name": "compute-actv-actv-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'},{uplink_name: "UPLINK2", uplink_type: 'PNIC'},{uplink_name: "UPLINK3", uplink_type: 'PNIC'},{uplink_name: "UPLINK4", uplink_type: 'PNIC'}]} }
-#       - {"name": "compute-actv-actv-6nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'},{uplink_name: "UPLINK2", uplink_type: 'PNIC'},{uplink_name: "UPLINK3", uplink_type: 'PNIC'},{uplink_name: "UPLINK4", uplink_type: 'PNIC'},{uplink_name: "UPLINK5", uplink_type: 'PNIC'},{uplink_name: "UPLINK6", uplink_type: 'PNIC'}]} }
-#       - {"name": "compute-actv-actv-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'},{uplink_name: "UPLINK2", uplink_type: 'PNIC'}]} }
-#       - {"name": "compute-actv-stdby-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'}], "standby_list": [{uplink_name: "UPLINK2", uplink_type: 'PNIC'}]} }
-#       - {"name": "compute-actv-stdby-1nic", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'}] } }
-#       - {"name": "edge-multi-TEP-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: 'PNIC'},{uplink_name: "EDG-UPLINK2", uplink_type: 'PNIC'}]} }
-#       - {"name": "edge-single-TEP-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: 'PNIC'}],"standby_list": [{uplink_name: "EDG-UPLINK2", uplink_type: 'PNIC'}]} }
-#   # - name: test
-#   #   debug:
-#   #     msg: "{{item.0}}"
-#   #     msg: "{{item.1}}"
-#   #   loop: "{{uplinkprofs| subelements('active-uplinks', 'skip_missing=True')}}"
+  - name: Create static compute/edge TEP Uplink Profiles
+    nsxt_uplink_profiles:
+      hostname: "{{nsxt_ip}}"
+      username: "{{nsx_username}}"
+      password: "{{nsx_password}}"
+      validate_certs: False
+      display_name: "UplinkProfl-{{item.name}}"
+      # mtu: 1600
+      resource_type: "UplinkHostSwitchProfile"
+      state: "present"
+      teaming: "{{item.tm}}"
+      transport_vlan: "{{overlay_vlan|default(0)}}"
+      named_teamings: "{{item.ntm|default(omit)}}"
+    loop:  
+      - {"name": "compute-actv-actv-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'},{uplink_name: "UPLINK2", uplink_type: 'PNIC'},{uplink_name: "UPLINK3", uplink_type: 'PNIC'},{uplink_name: "UPLINK4", uplink_type: 'PNIC'}]} }
+      - {"name": "compute-actv-actv-6nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'},{uplink_name: "UPLINK2", uplink_type: 'PNIC'},{uplink_name: "UPLINK3", uplink_type: 'PNIC'},{uplink_name: "UPLINK4", uplink_type: 'PNIC'},{uplink_name: "UPLINK5", uplink_type: 'PNIC'},{uplink_name: "UPLINK6", uplink_type: 'PNIC'}]} }
+      - {"name": "compute-actv-actv-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'},{uplink_name: "UPLINK2", uplink_type: 'PNIC'}]} }
+      - {"name": "compute-actv-stdby-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'}], "standby_list": [{uplink_name: "UPLINK2", uplink_type: 'PNIC'}]} }
+      - {"name": "compute-actv-stdby-1nic", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'}] } }
+      - {"name": "edge-multi-TEP-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: 'PNIC'},{uplink_name: "EDG-UPLINK2", uplink_type: 'PNIC'}]} }
+      - {"name": "edge-single-TEP-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: 'PNIC'}],"standby_list": [{uplink_name: "EDG-UPLINK2", uplink_type: 'PNIC'}]} }
+  # - name: test
+  #   debug:
+  #     msg: "{{item.0}}"
+  #     msg: "{{item.1}}"
+  #   loop: "{{uplinkprofs| subelements('active-uplinks', 'skip_missing=True')}}"
 
 
 
-  # - name: Create NSX-T transport node profile for clusters with NVDS
-  #   nsxt_transport_node_profiles:
-  #     hostname: "{{nsxt_ip}}"
-  #     username: "{{nsx_username}}"
-  #     password: "{{nsx_password}}"
-  #     validate_certs: False
-  #     resource_type: TransportNodeProfile
-  #     display_name: "{{ item[0].transport_node_profile_name }}"
-  #     description: "Transport Node Profile {{ item[0].transport_node_profile_name }}"
-  #     host_switch_spec:
-  #       resource_type: StandardHostSwitchSpec
-  #       host_switches:
-  #       - host_switch_profiles:
-  #         - name: "UplinkProfl-{{item[0].uplink_profile}}"
-  #           type: "UplinkHostSwitchProfile"
-  #         - name: LLDP [Send Packet Enabled]
-  #           type: LldpHostSwitchProfile
-  #         - name: nsx-default-nioc-hostswitch-profile
-  #           type: NiocProfile                      
-  #         host_switch_name: "NSXT-NVDS"
-  #         host_switch_mode: "STANDARD"
-  #         is_migrate_pnics: "False"
-  #         pnics: "{{item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
-  #         # pnics: "{{item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
-  #         # - device_name: "item[1]"
-  #         #   uplink_name: "uplink-1"
-  #         ip_assignment_spec:
-  #           resource_type: "StaticIpPoolSpec"
-  #           ip_pool_name: "NSX_TEP_POOL"
-  #         # vmk_install_migration:
-  #         # - device_name: vmk0
-  #         #   destination_network_name: "ls_vmk_Mgmt"
-  #     transport_zone_endpoints:
-  #     - transport_zone_name: "TZ_Overlay"
-  #     - transport_zone_name: "TZ_Vlan"
-  #     state: present
-  #   # loop: "{{system_fabric|json_query('compute_transp_nodes[*]')|subelements('nics', 'skip_missing=True')}}"
-  #   loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
-  #   when: (item.0.switch_type == 'NVDS') and (item.0.transport_node_profile_name is defined) and (item.0.nics is defined)
+  - name: Create NSX-T transport node profile for clusters with NVDS
+    nsxt_transport_node_profiles:
+      hostname: "{{nsxt_ip}}"
+      username: "{{nsx_username}}"
+      password: "{{nsx_password}}"
+      validate_certs: False
+      resource_type: TransportNodeProfile
+      display_name: "{{ item[0].transport_node_profile_name }}"
+      description: "Transport Node Profile {{ item[0].transport_node_profile_name }}"
+      host_switch_spec:
+        resource_type: StandardHostSwitchSpec
+        host_switches:
+        - host_switch_profiles:
+          - name: "UplinkProfl-{{item[0].uplink_profile}}"
+            type: "UplinkHostSwitchProfile"
+          - name: LLDP [Send Packet Enabled]
+            type: LldpHostSwitchProfile
+          - name: nsx-default-nioc-hostswitch-profile
+            type: NiocProfile                      
+          host_switch_name: "NSXT-NVDS"
+          host_switch_mode: "STANDARD"
+          is_migrate_pnics: "False"
+          pnics: "{{item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
+          # pnics: "{{item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
+          # - device_name: "item[1]"
+          #   uplink_name: "uplink-1"
+          ip_assignment_spec:
+            resource_type: "StaticIpPoolSpec"
+            ip_pool_name: "NSX_TEP_POOL"
+          # vmk_install_migration:
+          # - device_name: vmk0
+          #   destination_network_name: "ls_vmk_Mgmt"
+      transport_zone_endpoints:
+      - transport_zone_name: "TZ_Overlay"
+      - transport_zone_name: "TZ_Vlan"
+      state: present
+    # loop: "{{system_fabric|json_query('compute_transp_nodes[*]')|subelements('nics', 'skip_missing=True')}}"
+    loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
+    when: (item.0.switch_type == 'NVDS') and (item.0.transport_node_profile_name is defined) and (item.0.nics is defined)
 
 
 
@@ -318,8 +318,9 @@
   #           type: LldpHostSwitchProfile
   #         - name: nsx-default-nioc-hostswitch-profile
   #           type: NiocProfile                      
-  #         host_switch_name: "NSXT-NVDS"
+  #         host_switch_name: "{{NSXT-NVDS}}"
   #         host_switch_mode: "STANDARD"
+  #         host_switch_type: "VDS"
   #         is_migrate_pnics: "False"
   #         uplinks: "{{item.nics}}"
   #         # pnics: "{{item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
@@ -340,17 +341,18 @@
   #   when: (item.switch_type == 'VDS') and (item.transport_node_profile_name is defined) and (item.nics is defined) and (item.vcenter) and (item.cluster_name) and (item.vds_name)
 
 
-  # - name: Create transport node collection
-  #     nsxt_transport_node_collections:
-  #       hostname: "{{hostname}}"
-  #       username: "{{username}}"
-  #       password: "{{password}}"
-  #       validate_certs: False
-  #       display_name: "TNC1"
-  #       resource_type: "TransportNodeCollection"
-  #       description: "Transport Node Collections 1"
-  #       compute_manager_name: "VC1"
-  #       cluster_name: "cl1"
-  #       transport_node_profile_name: "TNP1"
-  #       state: present
-
+  - name: Create transport node collection
+    nsxt_transport_node_collections:
+      hostname: "{{nsxt_ip}}"
+      username: "{{nsx_username}}"
+      password: "{{nsx_password}}"
+      validate_certs: False
+      display_name: "TranspNode-{{item.cluster_name}}"
+      resource_type: "TransportNodeCollection"
+      description: "Transport Node {{item.cluster_name}}"
+      compute_manager_name: "{{item.vcenter}}"
+      cluster_name: "{{item.cluster_name}}"
+      transport_node_profile_name: "{{ item.transport_node_profile_name }}"
+      state: present
+    loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
+    when: (item.cluster_name is !='') and (item.transport_node_profile_name is defined) and (item.nics is defined)
