--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -75,181 +75,181 @@
   #   debug:
   #     msg: "{{cpu_mgr}}"
 
-  - name: Create transport zone
-    nsxt_transport_zones:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      resource_type: "TransportZone"
-      display_name: "TZ_{{item}}"
-      host_switch_mode: "STANDARD"
-      description: "NSX configured {{item}} Transport Zone"
-      transport_type: "{%if 'Overlay' in item%}OVERLAY{%elif 'Vlan' in item%}VLAN{%endif%}"
-      is_default: "false"
-      nested_nsx: "false"
-      host_switch_name: "NSXT-NVDS"
-      state: "present"
-    with_items:
-      - Overlay
-      - Vlan
+#   - name: Create transport zone
+#     nsxt_transport_zones:
+#       hostname: "{{nsxt_ip}}"
+#       username: "{{nsx_username}}"
+#       password: "{{nsx_password}}"
+#       validate_certs: False
+#       resource_type: "TransportZone"
+#       display_name: "TZ_{{item}}"
+#       host_switch_mode: "STANDARD"
+#       description: "NSX configured {{item}} Transport Zone"
+#       transport_type: "{%if 'Overlay' in item%}OVERLAY{%elif 'Vlan' in item%}VLAN{%endif%}"
+#       is_default: "false"
+#       nested_nsx: "false"
+#       host_switch_name: "NSXT-NVDS"
+#       state: "present"
+#     with_items:
+#       - Overlay
+#       - Vlan
 
 
-# # This is a spot in case the Edges are nested inside compute transport node NVDS
-#   # - name: Create transport zone
-#   #   nsxt_transport_zones:
-#   #     hostname: "{{nsxt_ip}}"
-#   #     username: "{{nsx_username}}"
-#   #     password: "{{nsx_password}}"
-#   #     validate_certs: False
-#   #     resource_type: "TransportZone"
-#   #     display_name: "TZ_{{item}}"
-#   #     host_switch_mode: "STANDARD"
-#   #     description: "NSX configured {{item}} Transport Zone"
-#   #     transport_type: "{%if 'Overlay' in item%}OVERLAY{%elif 'Vlan' in item%}VLAN{%endif%}"
-#   #     is_default: "false"
-#   #     nested_nsx: "false"
-#   #     host_switch_name: "NSXT-NVDS"
-#   #     state: "present"
-#   #   with_items:
-#   #     - Overlay
-#   #     - Vlan
-#   #     - Edge-1st-Vlan
-#   #     - Edge-2nd-Vlan
-#   #     - Edge-3rd-Vlan
-#   #     - Edge-4th-Vlan
+# # # This is a spot in case the Edges are nested inside compute transport node NVDS
+# #   # - name: Create transport zone
+# #   #   nsxt_transport_zones:
+# #   #     hostname: "{{nsxt_ip}}"
+# #   #     username: "{{nsx_username}}"
+# #   #     password: "{{nsx_password}}"
+# #   #     validate_certs: False
+# #   #     resource_type: "TransportZone"
+# #   #     display_name: "TZ_{{item}}"
+# #   #     host_switch_mode: "STANDARD"
+# #   #     description: "NSX configured {{item}} Transport Zone"
+# #   #     transport_type: "{%if 'Overlay' in item%}OVERLAY{%elif 'Vlan' in item%}VLAN{%endif%}"
+# #   #     is_default: "false"
+# #   #     nested_nsx: "false"
+# #   #     host_switch_name: "NSXT-NVDS"
+# #   #     state: "present"
+# #   #   with_items:
+# #   #     - Overlay
+# #   #     - Vlan
+# #   #     - Edge-1st-Vlan
+# #   #     - Edge-2nd-Vlan
+# #   #     - Edge-3rd-Vlan
+# #   #     - Edge-4th-Vlan
 
 
-#   # - name: View all compute managers
+# #   # - name: View all compute managers
+# #   #   debug:
+# #   #     msg: "start_{{item|ipaddr('-2')|ipaddr('address')}}"
+# #   #   loop: "{{system_fabric.tep_pool_gws}}"
+# #   #   when: system_fabric.tep_pool_gws is defined
+
+
+# #   # - name: create IP Pool
+# #   #   nsxt_ip_pools:
+# #   #     hostname: "{{nsxt_ip}}"
+# #   #     username: "{{nsx_username}}"
+# #   #     password: "{{nsx_password}}"
+# #   #     validate_certs: False
+# #   #     display_name: "TEP_subnet_{{item|ipaddr('network/prefix')}}"
+# #   #     state: "present"
+# #   #     subnets:
+# #   #       - allocation_ranges:
+# #   #           - start: "{{item|ipaddr('2')|ipaddr('address')}}"
+# #   #             end: "{{item|ipaddr('-2')|ipaddr('address')}}"
+# #   #         cidr: "{{item|ipaddr('network/prefix')}}"
+# #   #         gateway_ip: "{{item|ipaddr('address')}}"
+# #   #   loop: "{{system_fabric.tep_pool_gws}}"
+# #   #   when: system_fabric.tep_pool_gws is defined          
+# #   #   vars: 
+# #   #     ansible_python_interpreter: /usr/bin/python3
+
+
+#   - name: create policy IP Pool
+#     nsxt_policy_ip_pool:
+#       hostname: "{{nsxt_ip}}"
+#       username: "{{nsx_username}}"
+#       password: "{{nsx_password}}"
+#       validate_certs: False
+#       id: NSX_TEP_POOL
+#       display_name: NSX_TEP_POOL
+#       state: "present"
+#       pool_static_subnets:      
+#         [
+#         {
+#           "display_name": "TEP_subnet_{{item|ipaddr('network')}}",
+#           "state": "present",
+#           "allocation_ranges": [
+#             {
+#               "start": "{{item|ipaddr('2')|ipaddr('address')}}",
+#               "end": "{{item|ipaddr('-2')|ipaddr('address')}}"
+#             }
+#           ],
+#           "gateway_ip": "{{item|ipaddr('address')}}",
+#           "cidr": "{{item|ipaddr('network/prefix')}}"
+#         }
+#        ]
+#     loop: "{{system_fabric.tep_pool_gws}}"
+#     when: system_fabric.tep_pool_gws is defined       
+#     vars: 
+#       ansible_python_interpreter: /usr/bin/python3
+
+
+
+
+
+
+
+#   - name: Create static compute/edge TEP Uplink Profiles
+#     nsxt_uplink_profiles:
+#       hostname: "{{nsxt_ip}}"
+#       username: "{{nsx_username}}"
+#       password: "{{nsx_password}}"
+#       validate_certs: False
+#       display_name: "UplinkProfl-{{item.name}}"
+#       # mtu: 1600
+#       resource_type: "UplinkHostSwitchProfile"
+#       state: "present"
+#       teaming: "{{item.tm}}"
+#       transport_vlan: "{{overlay_vlan|default(0)}}"
+#       named_teamings: "{{item.ntm|default(omit)}}"
+#     loop:  
+#       - {"name": "compute-actv-actv-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'},{uplink_name: "UPLINK2", uplink_type: 'PNIC'},{uplink_name: "UPLINK3", uplink_type: 'PNIC'},{uplink_name: "UPLINK4", uplink_type: 'PNIC'}]} }
+#       - {"name": "compute-actv-actv-6nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'},{uplink_name: "UPLINK2", uplink_type: 'PNIC'},{uplink_name: "UPLINK3", uplink_type: 'PNIC'},{uplink_name: "UPLINK4", uplink_type: 'PNIC'},{uplink_name: "UPLINK5", uplink_type: 'PNIC'},{uplink_name: "UPLINK6", uplink_type: 'PNIC'}]} }
+#       - {"name": "compute-actv-actv-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'},{uplink_name: "UPLINK2", uplink_type: 'PNIC'}]} }
+#       - {"name": "compute-actv-stdby-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'}], "standby_list": [{uplink_name: "UPLINK2", uplink_type: 'PNIC'}]} }
+#       - {"name": "compute-actv-stdby-1nic", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'}] } }
+#       - {"name": "edge-multi-TEP-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: 'PNIC'},{uplink_name: "EDG-UPLINK2", uplink_type: 'PNIC'}]} }
+#       - {"name": "edge-single-TEP-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: 'PNIC'}],"standby_list": [{uplink_name: "EDG-UPLINK2", uplink_type: 'PNIC'}]} }
+#   # - name: test
 #   #   debug:
-#   #     msg: "start_{{item|ipaddr('-2')|ipaddr('address')}}"
-#   #   loop: "{{system_fabric.tep_pool_gws}}"
-#   #   when: system_fabric.tep_pool_gws is defined
-
-
-#   # - name: create IP Pool
-#   #   nsxt_ip_pools:
-#   #     hostname: "{{nsxt_ip}}"
-#   #     username: "{{nsx_username}}"
-#   #     password: "{{nsx_password}}"
-#   #     validate_certs: False
-#   #     display_name: "TEP_subnet_{{item|ipaddr('network/prefix')}}"
-#   #     state: "present"
-#   #     subnets:
-#   #       - allocation_ranges:
-#   #           - start: "{{item|ipaddr('2')|ipaddr('address')}}"
-#   #             end: "{{item|ipaddr('-2')|ipaddr('address')}}"
-#   #         cidr: "{{item|ipaddr('network/prefix')}}"
-#   #         gateway_ip: "{{item|ipaddr('address')}}"
-#   #   loop: "{{system_fabric.tep_pool_gws}}"
-#   #   when: system_fabric.tep_pool_gws is defined          
-#   #   vars: 
-#   #     ansible_python_interpreter: /usr/bin/python3
-
-
-  - name: create policy IP Pool
-    nsxt_policy_ip_pool:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      id: NSX_TEP_POOL
-      display_name: NSX_TEP_POOL
-      state: "present"
-      pool_static_subnets:      
-        [
-        {
-          "display_name": "TEP_subnet_{{item|ipaddr('network')}}",
-          "state": "present",
-          "allocation_ranges": [
-            {
-              "start": "{{item|ipaddr('2')|ipaddr('address')}}",
-              "end": "{{item|ipaddr('-2')|ipaddr('address')}}"
-            }
-          ],
-          "gateway_ip": "{{item|ipaddr('address')}}",
-          "cidr": "{{item|ipaddr('network/prefix')}}"
-        }
-       ]
-    loop: "{{system_fabric.tep_pool_gws}}"
-    when: system_fabric.tep_pool_gws is defined       
-    vars: 
-      ansible_python_interpreter: /usr/bin/python3
+#   #     msg: "{{item.0}}"
+#   #     msg: "{{item.1}}"
+#   #   loop: "{{uplinkprofs| subelements('active-uplinks', 'skip_missing=True')}}"
 
 
 
-
-
-
-
-  - name: Create static compute/edge TEP Uplink Profiles
-    nsxt_uplink_profiles:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      display_name: "UplinkProfl-{{item.name}}"
-      # mtu: 1600
-      resource_type: "UplinkHostSwitchProfile"
-      state: "present"
-      teaming: "{{item.tm}}"
-      transport_vlan: "{{overlay_vlan|default(0)}}"
-      named_teamings: "{{item.ntm|default(omit)}}"
-    loop:  
-      - {"name": "compute-actv-actv-4nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'},{uplink_name: "UPLINK2", uplink_type: 'PNIC'},{uplink_name: "UPLINK3", uplink_type: 'PNIC'},{uplink_name: "UPLINK4", uplink_type: 'PNIC'}]} }
-      - {"name": "compute-actv-actv-6nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'},{uplink_name: "UPLINK2", uplink_type: 'PNIC'},{uplink_name: "UPLINK3", uplink_type: 'PNIC'},{uplink_name: "UPLINK4", uplink_type: 'PNIC'},{uplink_name: "UPLINK5", uplink_type: 'PNIC'},{uplink_name: "UPLINK6", uplink_type: 'PNIC'}]} }
-      - {"name": "compute-actv-actv-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'},{uplink_name: "UPLINK2", uplink_type: 'PNIC'}]} }
-      - {"name": "compute-actv-stdby-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'}], "standby_list": [{uplink_name: "UPLINK2", uplink_type: 'PNIC'}]} }
-      - {"name": "compute-actv-stdby-1nic", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "UPLINK1", uplink_type: 'PNIC'}] } }
-      - {"name": "edge-multi-TEP-2nics", 'tm': {"policy": "LOADBALANCE_SRCID", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: 'PNIC'},{uplink_name: "EDG-UPLINK2", uplink_type: 'PNIC'}]} }
-      - {"name": "edge-single-TEP-2nics", 'tm': {"policy": "FAILOVER_ORDER", "active_list": [{uplink_name: "EDG-UPLINK1", uplink_type: 'PNIC'}],"standby_list": [{uplink_name: "EDG-UPLINK2", uplink_type: 'PNIC'}]} }
-  # - name: test
-  #   debug:
-  #     msg: "{{item.0}}"
-  #     msg: "{{item.1}}"
-  #   loop: "{{uplinkprofs| subelements('active-uplinks', 'skip_missing=True')}}"
-
-
-
-  - name: Create NSX-T transport node profile for clusters with NVDS
-    nsxt_transport_node_profiles:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      resource_type: TransportNodeProfile
-      display_name: "{{ item.transport_node_profile_name }}"
-      description: "Transport Node Profile {{ item.transport_node_profile_name }}"
-      host_switch_spec:
-        resource_type: StandardHostSwitchSpec
-        host_switches:
-        - host_switch_profiles:
-          - name: "UplinkProfl-{{item.uplink_profile}}"
-            type: "UplinkHostSwitchProfile"
-          - name: LLDP [Send Packet Enabled]
-            type: LldpHostSwitchProfile
-          - name: nsx-default-nioc-hostswitch-profile
-            type: NiocProfile                      
-          host_switch_name: "NSXT-NVDS"
-          host_switch_mode: "STANDARD"
-          is_migrate_pnics: "False"
-          pnics: "{{item.nics}}"
-          # pnics: "{{item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
-          # - device_name: "item[1]"
-          #   uplink_name: "uplink-1"
-          ip_assignment_spec:
-            resource_type: "StaticIpPoolSpec"
-            ip_pool_name: "NSX_TEP_POOL"
-          # vmk_install_migration:
-          # - device_name: vmk0
-          #   destination_network_name: "ls_vmk_Mgmt"
-      transport_zone_endpoints:
-      - transport_zone_name: "TZ_Overlay"
-      - transport_zone_name: "TZ_Vlan"
-      state: present
-    # loop: "{{system_fabric|json_query('compute_transp_nodes[*]')|subelements('nics', 'skip_missing=True')}}"
-    loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
-    when: (item.switch_type == 'NVDS') and (item.transport_node_profile_name is defined) and (item.nics is defined)
+#   - name: Create NSX-T transport node profile for clusters with NVDS
+#     nsxt_transport_node_profiles:
+#       hostname: "{{nsxt_ip}}"
+#       username: "{{nsx_username}}"
+#       password: "{{nsx_password}}"
+#       validate_certs: False
+#       resource_type: TransportNodeProfile
+#       display_name: "{{ item.transport_node_profile_name }}"
+#       description: "Transport Node Profile {{ item.transport_node_profile_name }}"
+#       host_switch_spec:
+#         resource_type: StandardHostSwitchSpec
+#         host_switches:
+#         - host_switch_profiles:
+#           - name: "UplinkProfl-{{item.uplink_profile}}"
+#             type: "UplinkHostSwitchProfile"
+#           - name: LLDP [Send Packet Enabled]
+#             type: LldpHostSwitchProfile
+#           - name: nsx-default-nioc-hostswitch-profile
+#             type: NiocProfile                      
+#           host_switch_name: "NSXT-NVDS"
+#           host_switch_mode: "STANDARD"
+#           is_migrate_pnics: "False"
+#           pnics: "{{item.nics}}"
+#           # pnics: "{{item.1|dict2items(key_name='uplink_name', value_name='device_name')}}"
+#           # - device_name: "item[1]"
+#           #   uplink_name: "uplink-1"
+#           ip_assignment_spec:
+#             resource_type: "StaticIpPoolSpec"
+#             ip_pool_name: "NSX_TEP_POOL"
+#           # vmk_install_migration:
+#           # - device_name: vmk0
+#           #   destination_network_name: "ls_vmk_Mgmt"
+#       transport_zone_endpoints:
+#       - transport_zone_name: "TZ_Overlay"
+#       - transport_zone_name: "TZ_Vlan"
+#       state: present
+#     # loop: "{{system_fabric|json_query('compute_transp_nodes[*]')|subelements('nics', 'skip_missing=True')}}"
+#     loop: "{{system_fabric|json_query('compute_transp_nodes[*]')}}"
+#     when: (item.switch_type == 'NVDS') and (item.transport_node_profile_name is defined) and (item.nics is defined)
 
 #################### to be tested in vsphere 7
   # - name: Create NSX-T transport node profile for clusters with VDS7
