--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -517,7 +517,7 @@
       teaming: "{{item.tm}}"
       transport_vlan: "{{edge_overlay_vlan|default(overlay_vlan)}}"
     loop: "{{uplink_prof_list}}"
-    when: (shared_compute == 'yes') and (edge_overlay_vlan != 0) and (edge_overlay_subnet|ipaddr) and ('edge' in item.name) 
+    when: (shared_compute == 'true') and (edge_overlay_vlan != 0) and (edge_overlay_subnet|ipaddr) and ('edge' in item.name) 
 
   - name: Create Edge overlay TEP IP Pool in case of shared compute cluster (policy)
     nsxt_policy_ip_pool:
@@ -543,7 +543,7 @@
           "cidr": "{{edge_overlay_subnet|ipaddr('network/prefix')}}"
         }
        ]
-    when: (shared_compute == 'yes') and (edge_overlay_vlan != 0) and (edge_overlay_subnet|ipaddr)
+    when: (shared_compute|lower == 'true') and (edge_overlay_vlan != 0) and (edge_overlay_subnet|ipaddr)
     vars: 
       ansible_python_interpreter: /usr/bin/python3
 
@@ -570,9 +570,9 @@
   - debug:
       msg: "{{shared_compute|string}}"
   - debug:
-      msg: "{{edge_overlay_vlan|int}}"
+      msg: "{{edge_overlay_vlan}}"
   - debug:
-      msg: "{{edge_overlay_subnet}}"
+      msg: "{{edge_overlay_subnet|ipaddr}}"
 
 ###################################### Deploying Edge VM    
 ######################################
@@ -596,7 +596,7 @@
 #             ip_assignment_spec:
 #               resource_type: "StaticIpPoolSpec"
 #               # ip_pool_name: "NSX_TEP_POOL"
-#               ip_pool_name: "{% if (shared_compute == 'yes') and (edge_overlay_vlan != 0) and (edge_overlay_subnet|ipaddr)%}EDGE_TEP_POOL_SHARED_COMPUTE{%else%}NSX_TEP_POOL{%endif%}"
+#               ip_pool_name: "{% if (shared_compute|lower == 'true') and (edge_overlay_vlan != 0) and (edge_overlay_subnet|ipaddr)%}EDGE_TEP_POOL_SHARED_COMPUTE{%else%}NSX_TEP_POOL{%endif%}"
 #               pnics: "{{item.nics}}"
 #             transport_zone_endpoints:
 #               - transport_zone_name: "TZ_Overlay"
