--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -89,7 +89,7 @@
 
   - name: test to see var content
     debug:
-      msg: "{{edge_vm_root_password|d(nsx_password)}}"
+      msg: "{{edge_vm_root_password}}"
 
 
   # - name: Disable password expiration for admin user
@@ -571,7 +571,7 @@
             ip_assignment_spec:
               resource_type: "StaticIpPoolSpec"
               # ip_pool_name: "NSX_TEP_POOL"
-              ip_pool_name: "{% if (shared_compute|lower == 'true') and (edge_overlay_vlan != 0) and (edge_overlay_subnet|ipaddr) %}EDGE_TEP_POOL_SHARED_COMPUTE{%else%}NSX_TEP_POOL{%endif%}"
+              ip_pool_name: "{{EDGE_TEP_POOL_SHARED_COMPUTE|default(NSX_TEP_POOL)}"
             pnics: "{{item.nics}}"
             transport_zone_endpoints:
               - transport_zone_name: "TZ_Overlay"
@@ -592,8 +592,8 @@
         deployment_config:
           form_factor: "{{item.edge_vm_size|upper}}"
           node_user_settings:
-            cli_password: "{{edge_vm_root_password|d(nsx_password)}}"
-            root_password: "{{edge_vm_root_password|d(nsx_password)}}"
+            cli_password: "{{edge_vm_root_password|default(nsx_password)}}"
+            root_password: "{{edge_vm_root_password|default(nsx_password)}}"
           vm_deployment_config:
             data_networks: "{{item.edge_vm_networks}}"
             default_gateway_addresses: 
