--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -87,12 +87,8 @@
   #   debug:
   #     msg: "{{cpu_mgr}}"
 
-  - name: test to see var content
-    debug:
-      msg: "{{edge_vm_root_password}}"
 
-
-  # - name: Disable password expiration for admin user
+  # - name: Disable password expiration for admin user (mgmt api)
   #   nsxt_rest:
   #     hostname: "{{nsxt_ip}}"
   #     username: "{{nsx_username}}"
@@ -549,8 +545,12 @@
 
   - name: Copy NSX-T pass to edge vm pass in case it is omitted
     set_fact:
-      temp_edge_vm_pass: "{{nsx_password}}"
-    when: edge_vm_root_password|bool
+      temp_edge_vm_pass: "{{edge_vm_root_password|default(nsx_password)}}"
+    when: (edge_vm_root_password)
+
+  - name: test to see var content
+    debug:
+      msg: "{{temp_edge_vm_pass}}"
 
 ###################################### Deploying Edge VM    
 ######################################
@@ -595,9 +595,9 @@
         deployment_config:
           form_factor: "{{item.edge_vm_size|upper}}"
           node_user_settings:
-            cli_password: "{{edge_vm_root_password|default(temp_edge_vm_pass)}}"
+            cli_password: "{{temp_edge_vm_pass}}"
             cli_username: "admin"
-            root_password: "{{edge_vm_root_password|default(temp_edge_vm_pass)}}"
+            root_password: "{{temp_edge_vm_pass}}"
           vm_deployment_config:
             data_networks: "{{item.edge_vm_networks}}"
             default_gateway_addresses: 
