--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -454,44 +454,44 @@
   #     content:
   #   register: list_tn
 
-  - name: Save NSX-T NTP server IP as variable
-    nsxt_rest:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      method: get
-      path: /api/v1/node/services/ntp
-      content:
-    register: nsxtm_ntp
+  # - name: Save NSX-T NTP server IP as variable
+  #   nsxt_rest:
+  #     hostname: "{{nsxt_ip}}"
+  #     username: "{{nsx_username}}"
+  #     password: "{{nsx_password}}"
+  #     validate_certs: False
+  #     method: get
+  #     path: /api/v1/node/services/ntp
+  #     content:
+  #   register: nsxtm_ntp
 
-  - name: Save NSX-T DNS server IP as variable
-    nsxt_rest:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      method: get
-      path: /api/v1/node/network/name-servers
-      content:
-    register: nsxtm_dns
+  # - name: Save NSX-T DNS server IP as variable
+  #   nsxt_rest:
+  #     hostname: "{{nsxt_ip}}"
+  #     username: "{{nsx_username}}"
+  #     password: "{{nsx_password}}"
+  #     validate_certs: False
+  #     method: get
+  #     path: /api/v1/node/network/name-servers
+  #     content:
+  #   register: nsxtm_dns
 
 
-  - name: Update static Edge TEP Uplink Profile in case of shared compute cluster 
-    nsxt_uplink_profiles:
-      hostname: "{{nsxt_ip}}"
-      username: "{{nsx_username}}"
-      password: "{{nsx_password}}"
-      validate_certs: False
-      display_name: "UplinkProfl-{{item.name}}"
-      # mtu: 1600
-      resource_type: "UplinkHostSwitchProfile"
-      state: "present"
-      teaming: "{{item.tm}}"
-      transport_vlan: "{{edge_overlay_vlan|default(overlay_vlan)}}"
-      named_teamings: "{{item.ntm|default(omit)}}"
-    loop: "{{uplink_prof_list}}"
-    when: (shared_compute|lower == 'true') and (edge_overlay_vlan != 0) and (edge_overlay_subnet|ipaddr) and ('edge' in item.name) 
+  # - name: Update static Edge TEP Uplink Profile in case of shared compute cluster 
+  #   nsxt_uplink_profiles:
+  #     hostname: "{{nsxt_ip}}"
+  #     username: "{{nsx_username}}"
+  #     password: "{{nsx_password}}"
+  #     validate_certs: False
+  #     display_name: "UplinkProfl-{{item.name}}"
+  #     # mtu: 1600
+  #     resource_type: "UplinkHostSwitchProfile"
+  #     state: "present"
+  #     teaming: "{{item.tm}}"
+  #     transport_vlan: "{{edge_overlay_vlan|default(overlay_vlan)}}"
+  #     named_teamings: "{{item.ntm|default(omit)}}"
+  #   loop: "{{uplink_prof_list}}"
+  #   when: (shared_compute|lower == 'true') and (edge_overlay_vlan != 0) and (edge_overlay_subnet|ipaddr) and ('edge' in item.name) 
 
   - name: Create Edge overlay TEP IP Pool in case of shared compute cluster (policy)
     nsxt_policy_ip_pool:
