--- a/01_NSX_install.yml
+++ b/01_NSX_install.yml
@@ -533,7 +533,7 @@
 
   - name: Copy NSX-T pass to edge vm pass in case it is omitted
     set_fact:
-      temp_edge_vm_pass: "{{edge_vm_root_password|default(nsx_password)}}"
+      temp_edge_vm_pass: "{{edge_vm_root_password|default('slimslom')}}"
 
   - name: test to see var content
     debug:
